[gd_scene load_steps=12 format=3 uid="uid://470nyv1hc0yu"]

[ext_resource type="PackedScene" uid="uid://dyenm6yugkrnq" path="res://Scenes/court.tscn" id="1_a0ook"]
[ext_resource type="Script" path="res://Scripts/world.gd" id="1_p2m2m"]
[ext_resource type="PackedScene" uid="uid://bsnjdg0rcr3mh" path="res://Scenes/ball.tscn" id="2_3wgox"]
[ext_resource type="PackedScene" uid="uid://c2qi7rf5gffjc" path="res://Scenes/player.tscn" id="4_qv8xv"]
[ext_resource type="Resource" uid="uid://ywvm12uk7mph" path="res://Scenes/controls/player2_controls.tres" id="5_ie02v"]
[ext_resource type="Resource" uid="uid://qnemv80au4bs" path="res://Scenes/Stats/player2_stats.tres" id="6_5uyyw"]
[ext_resource type="PackedScene" uid="uid://c0tj5kxq48hfb" path="res://Scenes/server.tscn" id="8_fgj1l"]
[ext_resource type="PackedScene" uid="uid://dg4rqw2eninrm" path="res://score_board.tscn" id="9_pfa2v"]

[sub_resource type="Animation" id="Animation_1ubjf"]
length = 0.001
step = 0.01

[sub_resource type="Animation" id="Animation_bivcd"]
resource_name = "point_reset"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Court/Players/Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Court/Players/Player2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(290, 90)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Court/BottomWall:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Court/Players/Player")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"p1_reset"
}, {
"args": [],
"method": &"p1_reset"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ephvi"]
_data = {
"RESET": SubResource("Animation_1ubjf"),
"point_reset": SubResource("Animation_bivcd")
}

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_p2m2m")
Ball = ExtResource("2_3wgox")

[node name="Court" parent="." instance=ExtResource("1_a0ook")]
y_sort_enabled = true
position = Vector2(0, -1)
metadata/_edit_lock_ = true

[node name="Court" parent="Court" index="0"]
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Court/TopWall" index="2"]
y_sort_enabled = true

[node name="RightGoal" parent="Court" index="3"]
position = Vector2(307, 165)
metadata/_edit_group_ = true

[node name="LeftGoal" parent="Court" index="4"]
position = Vector2(12, 165)
metadata/_edit_group_ = true

[node name="Players" type="Node2D" parent="Court"]
y_sort_enabled = true

[node name="Player" parent="Court/Players" instance=ExtResource("4_qv8xv")]
position = Vector2(35, 90)
metadata/_edit_group_ = true

[node name="Player2" parent="Court/Players" instance=ExtResource("4_qv8xv")]
position = Vector2(290, 90)
Controls = ExtResource("5_ie02v")
Stats = ExtResource("6_5uyyw")
metadata/_edit_group_ = true

[node name="Server" parent="." instance=ExtResource("8_fgj1l")]
position = Vector2(160, 167)
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ephvi")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[node name="ScoreBoard" parent="." instance=ExtResource("9_pfa2v")]
position = Vector2(160, 15)

[connection signal="body_entered" from="Court/RightGoal/PlayerGoal" to="." method="_on_player_2_goal_body_entered"]
[connection signal="body_entered" from="Court/LeftGoal/PlayerGoal" to="." method="_on_player_1_goal_body_entered"]
[connection signal="player_set" from="Court/Players/Player" to="." method="_on_player_player_set"]
[connection signal="player_set" from="Court/Players/Player2" to="." method="_on_player_2_player_set"]

[editable path="Court"]
[editable path="Court/RightGoal"]
[editable path="Court/LeftGoal"]
